--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
         <h1>
             hello world
         </h1>
+        <script src="./index.js">
+        
+        </script>
     </body>
 </html>
