--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <html>
+    <head>
+        
+        <link rel="stylesheet" href="./index.css">
+        
+    </head>
     <body>
         <h1>
             hello world
